# aries-acapy-tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alice.agent964855.db  alice.db  dev_env_reset_postgres_db  faber.agent326531.db  faber.db  pyproject.toml  setup.py
.github/: dependabot.yml  settings.yml
.github/workflows/: publish.yml
acapy_wallet_upgrade/: README.md  __main__.py  db_connection.py  error.py  pg_connection.py  pg_connection_mwst.py  pg_connection_mwst_profiles.py  pg_connection_mwst_separate_stores.py  pg_mwst_connection.py  pg_mwst_stores_connection.py  sql_commands.py  sqlite_connection.py  strategies.py
acapy_wallet_upgrade/demo/: README.md
acapy_wallet_upgrade/tests/e2e/: __init__.py  cases.py  containers.py  test_pg_dbpw.py  test_pg_mwst_profiles.py  test_pg_mwst_stores.py  test_sqlite.py
aries_askar_upgrade/: askar-upgrade.py  sqlite_connection.py
askar_tools/: README.md  __main__.py  db_connection.py  error.py  exporter.py  importer.py  key_methods.py  multi_wallet_converter.py  pg_connection.py  sqlite_connection.py  tenant_importer.py  wallet_export.json
askar_tools/tests/e2e/: cases.py  containers.py  test_export.py  test_mt_convert_to_mw.py  test_tenant_import.py
demo/: README.md  docker-compose-askar.yml  docker-compose.yml
docker/: Dockerfile  README.md
tests/: test_migration.py  test_progress.py
tests/e2e/: README.md  __init__.py  cases.py  conftest.py  containers.py  test_pg_dbpw.py  test_pg_mwst_profiles.py  test_pg_mwst_stores.py  test_sqlite.py
tests/input/: .gitignore  Dockerfile  Makefile  docker-compose.yml  populate_db.py
