[tool.poetry]
name = "askar-tools"
version = "0.1.0"
description = "Tools for managing Aries Askar wallets"
authors = [
	"Andrew Whitehead <cywolf@gmail.com>",
	"Adam Burdett <burdettadam@gmail.com>",
	"Char Howland <char@indicio.tech>",
	"Daniel Bluhm <dbluhm@pm.me>",
	"Jamie Hale <jamiehalebc@gmail.com>"
]
license = "Apache-2.0"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
]
readme = "README.md"
repository = "https://github.com/hyperledger/aries-acapy-tools.git"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "~=0.17"
aries-askar = "~=0.2"
asyncpg = "~=0.22"
base58 = "~=1.0"
cbor2 = "~=5.2"
msgpack = "~=1.0"
PyNaCl = "~=1.4"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "<24.4.0"
flake8 = "<6.0.0"
pytest = "<7.5.0"
pytest-asyncio = "<0.20.3"
pre-commit = "<2.21.0"
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", rev = "main"}
docker = "7.1.0"

[tool.poetry.scripts]
askar-upgrade = "acapy_wallet_upgrade.__main__:entrypoint"
askar-tools = "askar_tools.__main__:entrypoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["e2e"]
